--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- HEADER -->
 		<header>
 			<p class="cupom-desconto">
-				Ganhe <span>R$10</span> no seu primeiro pedido! Utilize o cupom <span>DESCONTO10</span>
+				Ganhe <span class="cupom-bg">R$10</span> no seu primeiro pedido! <br class="mobileBreak" />Utilize o cupom <span class="italic">DESCONTO10</em>
 			</p>
 			<div class="header-container">
 				<img src="images/header/avantiLogo.png" alt="Logo da Avanti" />
@@ -43,7 +43,7 @@
 							</defs>
 						</svg>							
 					</a>
-					<p>Olá,<br />Nome do Cliente</p>
+					<p class="user-name">Olá,<br />Nome do Cliente</p>
 					<button type="button" id="cart-button">
 						<span class="cart-count">0</span>
 						<a href="#">
@@ -52,8 +52,6 @@
 								<path d="M22.4999 20.662C22.4999 19.7766 22.1483 18.9276 21.5222 18.3017C20.8964 17.6757 20.0474 17.324 19.162 17.324C18.2768 17.324 17.4278 17.6757 16.8017 18.3017C16.1758 18.9276 15.824 19.7766 15.824 20.662C15.824 21.5472 16.1758 22.3962 16.8017 23.0223C17.4278 23.6482 18.2768 24 19.162 24C20.0474 24 20.8964 23.6482 21.5222 23.0223C22.1483 22.3962 22.4999 21.5472 22.4999 20.662ZM17.6785 20.662C17.6865 20.2709 17.8452 19.8982 18.1218 19.6218C18.3984 19.3452 18.7712 19.1863 19.162 19.1785C19.5555 19.1785 19.933 19.3348 20.2111 19.6129C20.4894 19.8911 20.6457 20.2686 20.6457 20.662C20.6541 21.058 20.5006 21.4403 20.2206 21.7203C19.9405 22.0004 19.5581 22.1541 19.162 22.1455C18.7686 22.1455 18.3913 21.9892 18.1132 21.7111C17.8348 21.4327 17.6785 21.0555 17.6785 20.662Z" fill="black"/>
 								<path d="M24.3853 5.02321H6.39755L5.68653 1.37611C5.64169 1.19695 5.54898 1.03332 5.41834 0.902677C5.28769 0.77203 5.12406 0.679326 4.94491 0.634484L1.69964 0.0164042V0.0161886C1.45409 -0.0295159 1.20034 0.0224404 0.992542 0.160848C0.784716 0.299471 0.639195 0.513765 0.587018 0.758011C0.54196 0.9999 0.594563 1.24977 0.733836 1.45264C0.872888 1.65551 1.08697 1.79478 1.32885 1.83983L3.98683 2.33418L6.24296 13.7079V13.7081C6.39905 14.4801 6.816 15.1747 7.42376 15.6757C8.03174 16.1765 8.79337 16.4531 9.58094 16.4588H19.7184C20.4553 16.4618 21.1731 16.2253 21.764 15.7851C22.355 15.3446 22.7868 14.7241 22.9944 14.017L25.2816 6.16672C25.3527 5.88926 25.296 5.59434 25.127 5.3632C24.9455 5.14114 24.6717 5.01567 24.3852 5.02321H24.3853ZM21.2019 13.5226C21.1178 13.849 20.9251 14.137 20.6554 14.3392C20.3857 14.5414 20.0554 14.6458 19.7184 14.6352H9.58098C9.22462 14.6352 8.87945 14.5121 8.60328 14.2868C8.32733 14.0615 8.13783 13.7479 8.06646 13.3988L6.76838 6.87749H23.1489L21.2019 13.5226Z" fill="black"/>
 								</svg>
-								
-							<!-- <img src="images/header/cart.png" alt="Carrinho de compras" /> -->
 						</a>
 					</button>
 				</span>
@@ -647,10 +645,10 @@
 				<img src="images/chair.jpg" alt="Cadeira com roupas dobradas sobre seu assento" />
 				<span class="hero-text">
 					<p class="supersale">
-						<span>Super</span>sale
+						<span>Super</span><br class="mobileBreak" />sale
 					</p>
 					<p class="items">itens selecionados com até</p>
-					<p class="off"><span>50% off</span></p>
+					<p class="off"><span>50%off</span></p>
 				</span>
 			</section>
 
@@ -791,7 +789,7 @@
 			</section>
 
 			<section class="text-content-2">
-				<div class="text-content">
+				<div class="text-content-2-container">
 					<div class="text-2">
 						<h1>Lorem ipsum</h1>
 						<div class="block">
@@ -825,7 +823,7 @@
 							</p>
 						</div>
 					</div>
-						<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
+					<img src="images/caneca2.png" alt="Caneca preta personalizada com o logo da Avanti em uma cozinha" />
 				</div>
 			</section>
 
@@ -985,9 +983,7 @@
 						<label for="privacy-check" class="privacy-check">Estou de acordo com a <a href="#">Política de Privacidade</a></label>
 					</div>
 					<div class="newsletter-item newsletter-button">
-						<button>
-							<input type="submit" name="submit" aria-label="Botão para se cadastrar" value="Cadastrar">
-						</button>
+						<input type="submit" name="submit" aria-label="Botão para se cadastrar" value="Cadastrar">
 					</div>
 				</form>
 			</section>
@@ -1000,49 +996,82 @@
         <footer>
 			<section class="about-section">
 				<div class="social-medias">
-					<div class="avanti-social">
-						<img src="images/header/avantiBlue.png" alt="logo da Avanti"/>
-					</div>
+						<img src="images/header/avantiLogo.png" alt="logo da Avanti"/>
 					<div class="social-icons">
 						<a href="#" target="_blank">
-							<img src="images/social/instagram.png" alt="Instagram" />
+							<svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M5.59087 19.5032C4.11694 19.5486 2.68482 19.0094 1.60687 18.0032C1.0723 17.4678 0.65366 16.8281 0.377018 16.124C0.100377 15.4198 -0.0283432 14.6662 -0.00112679 13.9102V6.05815C-0.0460495 5.31712 0.0667904 4.575 0.329937 3.88081C0.593084 3.18662 1.00055 2.55618 1.5254 2.03113C2.05026 1.50609 2.68055 1.0984 3.37465 0.835002C4.06874 0.571605 4.81083 0.458498 5.55187 0.503154H13.4449C14.1867 0.477537 14.926 0.60366 15.6175 0.873796C16.3089 1.14393 16.9379 1.55239 17.4659 2.07415C17.9744 2.60225 18.3721 3.22684 18.6354 3.91109C18.8987 4.59533 19.0223 5.32537 18.9989 6.05815V13.9492C19.0276 14.6962 18.9031 15.4413 18.6331 16.1385C18.3631 16.8357 17.9533 17.4703 17.4289 18.0032C16.3375 19.0124 14.8926 19.5513 13.4069 19.5032H5.59087ZM2.79887 3.26215C2.44703 3.63531 2.1741 4.07563 1.99643 4.55674C1.81876 5.03786 1.74 5.54988 1.76487 6.06215V13.9152C1.73785 14.4319 1.81552 14.9487 1.9932 15.4347C2.17088 15.9207 2.44492 16.3657 2.79887 16.7432C3.5664 17.4283 4.57094 17.7871 5.59887 17.7432H13.4149C14.4428 17.787 15.4473 17.4283 16.2149 16.7432C16.5833 16.3795 16.8723 15.9433 17.0635 15.4622C17.2548 14.9811 17.3441 14.4655 17.3259 13.9482V6.05815C17.3452 5.03917 16.9701 4.05213 16.2789 3.30315C15.9058 2.95116 15.4655 2.67814 14.9844 2.50046C14.5032 2.32279 13.9912 2.24411 13.4789 2.26915H5.59087C4.5656 2.21849 3.56191 2.57547 2.79887 3.26215ZM4.59887 9.96215C4.59887 8.99302 4.88625 8.04566 5.42467 7.23986C5.96309 6.43406 6.72837 5.80601 7.62372 5.43514C8.51908 5.06427 9.50431 4.96724 10.4548 5.15631C11.4053 5.34537 12.2784 5.81205 12.9637 6.49733C13.649 7.18261 14.1157 8.0557 14.3047 9.00621C14.4938 9.95672 14.3968 10.9419 14.0259 11.8373C13.655 12.7327 13.027 13.4979 12.2212 14.0364C11.4154 14.5748 10.468 14.8622 9.49887 14.8622C8.20072 14.8593 6.95653 14.3425 6.03832 13.4248C5.1201 12.5072 4.60257 11.2633 4.59887 9.96515V9.96215ZM6.36187 9.96215C6.36148 10.5836 6.54546 11.1913 6.89053 11.7082C7.23561 12.225 7.72626 12.6279 8.3004 12.8659C8.87454 13.1038 9.50636 13.166 10.1159 13.0447C10.7254 12.9235 11.2853 12.6241 11.7246 12.1845C12.1639 11.7449 12.463 11.1848 12.5839 10.5752C12.7048 9.9656 12.6421 9.33382 12.4038 8.75983C12.1655 8.18584 11.7623 7.69545 11.2452 7.3507C10.7281 7.00596 10.1204 6.82236 9.49887 6.82315C8.66671 6.82658 7.86962 7.15874 7.28128 7.74727C6.69294 8.33579 6.36103 9.13299 6.35787 9.96515L6.36187 9.96215ZM13.4869 4.94215C13.4879 4.72268 13.5538 4.50841 13.6765 4.32639C13.7991 4.14436 13.9729 4.00274 14.1759 3.91939C14.379 3.83604 14.6021 3.81469 14.8173 3.85804C15.0325 3.90139 15.23 4.0075 15.3849 4.16297C15.5398 4.31844 15.6452 4.51632 15.6878 4.73163C15.7303 4.94694 15.7082 5.17003 15.6241 5.37277C15.54 5.5755 15.3978 5.74879 15.2153 5.87077C15.0329 5.99275 14.8184 6.05795 14.5989 6.05815C14.4524 6.05868 14.3073 6.03027 14.1719 5.97456C14.0364 5.91885 13.9133 5.83694 13.8096 5.73352C13.7059 5.6301 13.6237 5.50722 13.5676 5.37193C13.5115 5.23664 13.4827 5.0916 13.4829 4.94515L13.4869 4.94215Z" fill="#005CFF"/>
+								</svg>								
 						</a>
 						<a href="#" target="_blank">
-							<img src="images/social/facebook.png" alt="Facebook" />
+							<svg width="11" height="24" viewBox="0 0 11 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M10.3889 8.05966H6.8519V5.73966C6.83272 5.60184 6.84422 5.46148 6.88557 5.32861C6.92693 5.19575 6.99711 5.07366 7.09111 4.97106C7.18511 4.86846 7.30061 4.78788 7.42936 4.73509C7.55811 4.6823 7.69693 4.65859 7.8359 4.66566H10.3359V0.83566L6.8939 0.82666C3.0779 0.82666 2.2099 3.68266 2.2099 5.51066V8.06366H0.00289917V12.0067H2.2099V23.1737H6.8519V12.0067H9.9839L10.3889 8.05966Z" fill="#005CFF"/>
+								</svg>								
 						</a>
 						<a href="#" target="_blank">
-							<img src="images/social/youtube.png" alt="Youtube" />
+							<svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M4.11393 20.3651C3.75465 20.2223 3.43391 19.9972 3.17755 19.7079C2.92118 19.4185 2.73635 19.073 2.63793 18.6991C2.20484 16.754 2.0114 14.7632 2.06193 12.7711C2.0117 10.7814 2.20479 8.79297 2.63693 6.8501C2.73342 6.47679 2.91614 6.13132 3.1704 5.84145C3.42466 5.55158 3.74338 5.32541 4.10093 5.1811C7.48793 3.8871 12.8349 3.8501 13.4339 3.8501H13.4719C14.0999 3.8501 19.4469 3.8871 22.8219 5.1761C23.181 5.31904 23.5015 5.54425 23.7577 5.8336C24.0138 6.12295 24.1985 6.46837 24.2969 6.8421C24.73 8.78721 24.9234 10.778 24.8729 12.7701C24.9234 14.7612 24.7303 16.7509 24.2979 18.6951C24.2008 19.0676 24.0178 19.4123 23.7636 19.7014C23.5094 19.9905 23.191 20.2161 22.8339 20.3601C19.4469 21.6541 14.0999 21.6911 13.5009 21.6911C12.8359 21.6921 7.48793 21.6501 4.11393 20.3651ZM4.69493 6.6991C4.57751 6.74801 4.47305 6.8235 4.38976 6.91963C4.30647 7.01576 4.24662 7.12991 4.21493 7.2531C3.81696 9.06435 3.641 10.9173 3.69093 12.7711C3.64097 14.6259 3.81727 16.4799 4.21593 18.2921C4.24841 18.417 4.30975 18.5326 4.39503 18.6295C4.48031 18.7264 4.58714 18.802 4.70693 18.8501C7.84993 20.0501 13.2069 20.0651 13.4339 20.0651C13.7269 20.0651 19.0849 20.0511 22.2399 18.8461C22.3573 18.7972 22.4618 18.7217 22.5451 18.6256C22.6284 18.5294 22.6882 18.4153 22.7199 18.2921C23.118 16.4805 23.2939 14.6272 23.2439 12.7731C23.294 10.9176 23.1177 9.06292 22.7189 7.2501C22.686 7.12574 22.6244 7.0108 22.5392 6.91445C22.4539 6.81809 22.3473 6.74298 22.2279 6.6951C19.0849 5.4951 13.7279 5.4801 13.5009 5.4801H13.4339C13.2079 5.4791 7.84993 5.4931 4.69493 6.6991ZM11.4539 16.7501C11.324 16.6805 11.2155 16.5769 11.1397 16.4505C11.064 16.3241 11.024 16.1795 11.0239 16.0321V9.5121C11.0237 9.36463 11.0636 9.21988 11.1393 9.09331C11.215 8.96674 11.3236 8.86312 11.4536 8.79349C11.5836 8.72387 11.7301 8.69088 11.8774 8.69803C12.0247 8.70518 12.1673 8.75221 12.2899 8.8341L17.1779 12.0931C17.2895 12.1674 17.381 12.2681 17.4443 12.3863C17.5076 12.5045 17.5407 12.6365 17.5407 12.7706C17.5407 12.9047 17.5076 13.0367 17.4443 13.1549C17.381 13.2731 17.2895 13.3738 17.1779 13.4481L12.2899 16.7071C12.1672 16.7887 12.0247 16.8356 11.8775 16.8426C11.7302 16.8497 11.5839 16.8166 11.4539 16.7471V16.7501ZM12.6539 14.5101L15.2539 12.7731L12.6539 11.0371V14.5101Z" fill="#005CFF"/>
+								</svg>								
 						</a>
 						<a href="#" target="_blank">
-							<img src="images/social/tiktok.png" alt="TikTok" />
+							<svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16.3203 4.99049C16.1787 4.9171 16.0408 4.83666 15.9073 4.74949C15.5185 4.49311 15.162 4.19095 14.8453 3.84949C14.2231 3.15433 13.8075 2.2992 13.6453 1.38049C13.5866 1.09104 13.5705 0.794596 13.5973 0.500488H9.99928V14.4455C9.99928 14.6325 9.99928 14.8175 9.99128 15.0005C9.99128 15.0235 9.99128 15.0445 9.99128 15.0685C9.99235 15.0788 9.99235 15.0892 9.99128 15.0995V15.1075C9.95333 15.608 9.79294 16.0914 9.52423 16.5153C9.25551 16.9393 8.88671 17.2906 8.45028 17.5385C7.99564 17.7972 7.4814 17.933 6.95828 17.9325C6.14606 17.9325 5.3671 17.6098 4.79277 17.0355C4.21844 16.4612 3.89578 15.6822 3.89578 14.87C3.89578 14.0578 4.21844 13.2788 4.79277 12.7045C5.3671 12.1301 6.14606 11.8075 6.95828 11.8075C7.27647 11.8071 7.59272 11.857 7.89528 11.9555V8.28349C6.97723 8.16493 6.04457 8.2379 5.15612 8.49779C4.26767 8.75768 3.44272 9.19886 2.73328 9.79349C2.11216 10.3323 1.58968 10.9753 1.18928 11.6935C0.683377 12.6243 0.408982 13.6632 0.389285 14.7225C0.381008 15.5367 0.511888 16.3464 0.776283 17.1165V17.1255C1.01443 17.7651 1.34421 18.3667 1.75528 18.9115C2.20074 19.4769 2.72706 19.9735 3.31728 20.3855V20.3765L3.32628 20.3855C4.41982 21.1064 5.69952 21.4935 7.00928 21.4995C7.95264 21.4995 8.88477 21.2948 9.74128 20.8995C10.5869 20.5006 11.3421 19.933 11.9603 19.2315C12.4744 18.6353 12.8833 17.9559 13.1693 17.2225C13.4333 16.4832 13.5801 15.7071 13.6043 14.9225V7.52249C13.6483 7.54849 14.2303 7.93449 14.2303 7.93449C14.9016 8.32972 15.625 8.62896 16.3793 8.82349C17.1041 8.98955 17.8424 9.08996 18.5853 9.12349V5.54349C17.7957 5.55332 17.0165 5.36307 16.3203 4.99049Z" fill="#005CFF"/>
+								</svg>
+								
 						</a>
 					</div>
 				</div>
 				<div class="contact-links">
 					<div class="contact-column">
-						<h4>Institucional</h4>
-						<h5><a href="#">Sobre Nós</a></h5>
-						<h5><a href="#">Nossas Lojas</a></h5>
-						<h5><a href="#">Privacidade e Segurança</a></h5>
-						<h5><a href="#">Termos e Condições</a></h5>
+						<h4 class="h4-1">
+							<span>Institucional</span>
+							<span class="svg-mobile">
+								<svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M10.5 3.17937e-09L12 1.5285L6 7.5L3.23978e-09 1.5285L1.5 2.22556e-08L6 4.5L10.5 3.17937e-09Z" fill="#005CFF"/>
+								</svg>
+							</span>
+						</h4>
+						<span class="h5-container1">
+							<h5><a href="#">Sobre Nós</a></h5>
+							<h5><a href="#">Nossas Lojas</a></h5>
+							<h5><a href="#">Privacidade e Segurança</a></h5>
+							<h5><a href="#">Termos e Condições</a></h5>
+						</span>
 					</div>
 					<div class="contact-column">
-						<h4>Central de ajuda</h4>
-						<h5><a href="#">Fale Conosco</a></h5>
-						<h5><a href="#">Frete e Entrega</a></h5>
-						<h5><a href="#">Trocas e Devoluções</a></h5>
-						<h5><a href="#">Formas de Pagamento</a></h5>
-						<h5><a href="#">FAQ</a></h5>
+						<h4 class="h4-2">
+							<span>Central de ajuda</span>
+							<span class="svg-mobile">
+								<svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M10.5 3.17937e-09L12 1.5285L6 7.5L3.23978e-09 1.5285L1.5 2.22556e-08L6 4.5L10.5 3.17937e-09Z" fill="#005CFF"/>
+								</svg>
+							</span>
+						</h4>
+						<span class="h5-container2">
+							<h5><a href="#">Fale Conosco</a></h5>
+							<h5><a href="#">Frete e Entrega</a></h5>
+							<h5><a href="#">Trocas e Devoluções</a></h5>
+							<h5><a href="#">Formas de Pagamento</a></h5>
+							<h5><a href="#">FAQ</a></h5>
+						</span>
 					</div>
 					<div class="contact-column">
-						<h4>Atendimento</h4>
-						<h5><strong>Telefone</strong>: (00) 1234-5678</a></h5>
-						<h5><strong>E-mail:</strong> <a href="mailto:exemplo@exemplo.com">exemplo@exemplo.com</a></h5>
-						<h5>
-							<strong>Horário de atendimento:</strong><br />
-							<span>Segunda à Sábado: 07h00 às 23h00<br />
-							Domingos e Feriados: 07h00 às 21h00</span>
-						</h5>
+						<h4 class="h4-3"><span>Atendimento</span>
+							<span class="svg-mobile">
+								<svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M10.5 3.17937e-09L12 1.5285L6 7.5L3.23978e-09 1.5285L1.5 2.22556e-08L6 4.5L10.5 3.17937e-09Z" fill="#005CFF"/>
+								</svg>
+							</span>
+						</h4>
+						<span class="h5-container3">
+							<h5><strong>Telefone</strong>: (00) 1234-5678</a></h5>
+							<h5><strong>E-mail:</strong> <a href="mailto:exemplo@exemplo.com">exemplo@exemplo.com</a></h5>
+							<h5>
+								<strong>Horário de atendimento:</strong><br />
+								<span>Segunda à Sábado: 07h00 às 23h00<br />
+								Domingos e Feriados: 07h00 às 21h00</span>
+							</h5>
+						</span>
 					</div>
 				</div>
 				<div class="payment-methods">
@@ -1077,6 +1106,7 @@
 		<script src="js/searchScript.js"></script>
 		<script src="js/swiperScript.js"></script>
 		<script src="js/dropdownScript.js"></script>
+		<script src="js/footerDropdown.js"></script>
 
     </body>
 </html>
