--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- HEADER -->
 		<header>
 			<p class="cupom-desconto">
-				Ganhe <span class="cupom-bg">R$10</span> no seu primeiro pedido! <br class="mobileBreak" />Utilize o cupom <span class="italic">DESCONTO10</em>
+				Ganhe <span class="cupom-bg">R$10</span> no seu primeiro pedido! <br class="mobile-break" />Utilize o cupom <span class="italic">DESCONTO10</em>
 			</p>
 			<div class="header-container">
 				<img src="images/header/avantiLogo.png" alt="Logo da Avanti" />
@@ -645,7 +645,7 @@
 				<img src="images/chair.jpg" alt="Cadeira com roupas dobradas sobre seu assento" />
 				<span class="hero-text">
 					<p class="supersale">
-						<span>Super</span><br class="mobileBreak" />sale
+						<span>Super</span><br class="mobile-break" />sale
 					</p>
 					<p class="items">itens selecionados com até</p>
 					<p class="off"><span>50%off</span></p>
